syntax = "proto3";

package AutoFuzz;

message FuzzArgsProfile {
  bytes fuzzvar32 = 1;
  bytes fuzzvar33 = 2;
  bytes fuzzvar35 = 3;
}

